# x402-mailcheck-api

./: .env.example  CLAUDE.md  mailcheck.py  main.py  payment_logger.py  pyproject.toml  rapidapi-openapi.json  self_pay.py
data/: role_prefixes.txt
tests/: test_api.py  test_mailcheck.py
